@@ -1,15 +1,16 @@
 package it.newunimol.comunicazioni.messaging;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.stereotype.Component;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import it.newunimol.comunicazioni.model.NotificationType;
-import it.newunimol.comunicazioni.repository.CourseSubscriptionRepository;
+import it.newunimol.comunicazioni.repository.UserAccountRepository; // utenti per broadcast
 import it.newunimol.comunicazioni.service.NotificationService;
 
 @Component
@@ -17,14 +18,14 @@ public class PlatformEventListener {
 
     private final ObjectMapper objectMapper;
     private final NotificationService notificationService;
-    private final CourseSubscriptionRepository subscriptionRepository;
+    private final UserAccountRepository userAccountRepository;
 
     public PlatformEventListener(ObjectMapper objectMapper,
                                  NotificationService notificationService,
-                                 CourseSubscriptionRepository subscriptionRepository) {
+                                 UserAccountRepository userAccountRepository) {
         this.objectMapper = objectMapper;
         this.notificationService = notificationService;
-        this.subscriptionRepository = subscriptionRepository;
+        this.userAccountRepository = userAccountRepository;
     }
 
     @RabbitListener(queues = "${app.rabbitmq.queue.materiale}")
@@ -38,31 +39,79 @@ public class PlatformEventListener {
 
     private void handleEvent(String rawJson) {
         try {
-            PlatformEvent evt = objectMapper.readValue(rawJson, PlatformEvent.class);
+            System.out.println("[EVENT] RAW=" + rawJson);
+            PlatformEvent evt = parseEvent(rawJson);
             var type = mapType(evt.eventType());
             String title = evt.title() != null ? evt.title() : defaultTitle(type);
             String message = evt.message() != null ? evt.message() : defaultMessage(type);
 
+            System.out.println("[EVENT] type=" + evt.eventType() + " courseId=" + evt.courseId() + " ref=" + evt.referenceId());
+
             if (evt.targetUserIds() != null && !evt.targetUserIds().isEmpty()) {
                 var uniq = evt.targetUserIds().stream().filter(s -> s != null && !s.isBlank()).distinct().toList();
                 if (!uniq.isEmpty()) {
+                    System.out.println("[EVENT] Notifiche dirette a utenti: " + uniq);
                     notificationService.createBulkNotifications(uniq, type, title, message, evt.referenceId(), buildLink(type, evt.courseId(), evt.referenceId()));
                 }
                 return;
             }
 
-            if (evt.courseId() != null) {
-                var users = subscriptionRepository.findByCourseId(evt.courseId()).stream()
-                        .map(sub -> sub.getUserId())
-                        .distinct()
-                        .collect(Collectors.toList());
-                if (!users.isEmpty()) {
-                    notificationService.createBulkNotifications(users, type, title, message, evt.referenceId(), buildLink(type, evt.courseId(), evt.referenceId()));
-                }
+            // Nuova logica broadcast: tutti gli utenti tranne i teacher
+            var targets = userAccountRepository.findByRoleNotIgnoreCase("teacher").stream()
+                    .map(u -> u.getUserId())
+                    .distinct()
+                    .toList();
+            System.out.println("[EVENT] Broadcast -> utenti notificati (no teacher): " + targets.size());
+            if (!targets.isEmpty()) {
+                notificationService.createBulkNotifications(targets, type, title, message, evt.referenceId(), buildLink(type, evt.courseId(), evt.referenceId()));
+            } else {
+                System.out.println("[EVENT] Nessun utente disponibile per broadcast (aggiungerli via /api/v1/dev/users)");
             }
         } catch (Exception e) {
             System.err.println("Errore elaborando evento piattaforma: " + e.getMessage());
         }
+    }
+
+    private PlatformEvent parseEvent(String raw) throws Exception {
+        String trimmed = raw == null ? "" : raw.trim();
+        if (trimmed.isEmpty()) throw new IllegalArgumentException("Evento vuoto");
+        if (trimmed.startsWith("{")) {
+            // JSON standard
+            return objectMapper.readValue(trimmed, PlatformEvent.class);
+        }
+        // Possibili formati legacy: key=value,key=value oppure key:value,key:value
+        if (!trimmed.contains("{")) {
+            String[] parts = trimmed.split("[,;]\s*");
+            StringBuilder json = new StringBuilder("{");
+            boolean first = true;
+            for (String p : parts) {
+                String[] kv = p.split("[=:]",2);
+                if (kv.length==2) {
+                    String k = kv[0].trim();
+                    String v = kv[1].trim();
+                    if (!first) json.append(',');
+                    first = false;
+                    boolean numeric = v.matches("[0-9]+");
+                    if (numeric) {
+                        json.append('"').append(k).append('\"').append(':').append(v);
+                    } else {
+                        // strip surrounding quotes if any
+                        if ((v.startsWith("\"") && v.endsWith("\"")) || (v.startsWith("'") && v.endsWith("'"))) {
+                            v = v.substring(1, v.length()-1);
+                        }
+                        v = v.replace("\\","\\\\").replace("\"","\\\"");
+                        json.append('"').append(k).append('\"').append(':').append('"').append(v).append('"');
+                    }
+                }
+            }
+            json.append('}');
+            String built = json.toString();
+            System.out.println("[EVENT][PARSE-FALLBACK] Converted to JSON: " + built);
+            return objectMapper.readValue(built, PlatformEvent.class);
+        }
+        // Ultimo tentativo: parse generico
+        JsonNode node = objectMapper.readTree(trimmed);
+        return objectMapper.treeToValue(node, PlatformEvent.class);
     }
 
     private NotificationType mapType(String eventType) {
@@ -116,6 +165,7 @@ public class PlatformEventListener {
         };
     }
 
+    @JsonIgnoreProperties(ignoreUnknown = true)
     static record PlatformEvent(
             String source,
             String eventType,
